# cognition-core

./: .gitignore  README.md  api.py  pyproject.toml  schemas.py
designs/: cognition-core.drawio
src/cognition-core/: config.py  crew.py
src/cognition-core/config/: memory.yaml
src/cognition-core/memory/: entity.py  long_term.py  mem_svc.py  short_term.py
src/cognition-core/tools/: tool_svc.py
src/cognition_core/: agent.py  base.py  config.py  crew.py  flow.py  llm.py  task.py
src/cognition_core/flows/examples/: cloud_resource_example.py
src/cognition_core/memory/: mem_svc.py
src/cognition_core/tests/flows/: conftest.py  test_cloud_resource_flow.py
src/cognition_core/tests/flows/test_config/: cloud_resource_flow.yaml
src/cognition_core/tools/: tool_svc.py
test/: test_config_service.py
tests/flows/: conftest.py  test_cloud_resource_flow.py
tests/flows/test_config/: cloud_resource_flow.yaml
